[gd_scene load_steps=19 format=4]

[ext_resource type="Script" path="res://objects/icicle/icicle.gd" id="1"]
[ext_resource type="AudioStream" uid="uid://dsp80syt1bq8m" path="res://objects/icicle/icicle.wav" id="2"]
[ext_resource type="PackedScene" uid="uid://bbmf88bb8sjw" path="res://engine/objects/effects/smoke/smoke.tscn" id="3"]
[ext_resource type="Shader" path="res://engine/shaders/highlight.gdshader" id="4"]
[ext_resource type="Texture2D" uid="uid://cd0nqnrqegyai" path="res://objects/icicle/icicle.png" id="5"]
[ext_resource type="Script" path="res://engine/scripts/nodes/enemies/enemy_attacked.gd" id="6"]
[ext_resource type="PackedScene" uid="uid://oe7i3cief0g" path="res://engine/objects/enemies/_dead/enemy_killed.tscn" id="7"]
[ext_resource type="Script" path="res://engine/objects/enemies/_dead/prefabs/do_killed.gd" id="8"]
[ext_resource type="Script" path="res://engine/scripts/resources/instance_node2d/instance_node2d.gd" id="9"]
[ext_resource type="AudioStream" uid="uid://be3uvqev2c1p6" path="res://engine/objects/players/prefabs/sounds/kick.wav" id="10"]
[ext_resource type="AudioStream" uid="uid://c162tqddc8eej" path="res://engine/objects/bumping_blocks/_sounds/bump.wav" id="11"]
[ext_resource type="Script" path="res://objects/icicle/icicle_animation.gd" id="12"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h3ptm"]
shader = ExtResource("4")
shader_parameter/highlight_color = Color(1, 1, 1, 1)
shader_parameter/frequency = 0.35
shader_parameter/highlight_speed = 6.0
shader_parameter/highlight_width = 15.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3q3cl"]
size = Vector2(24, 64)

[sub_resource type="Resource" id="Resource_6dehk"]
script = ExtResource("9")
creation_nodepack = ExtResource("7")
trans_offset = Vector2(0, 0)
trans_inheritances = 6
trans_rotation = 0.0
trans_scale = Vector2(1, 1)
trans_skew = 0.0
visi_z_index = 0
visi_z_as_relative = true
visi_y_sort_enabled = false
custom_vars = {
"death": NodePath("../../Sprite2D"),
"death_speed": Vector2(0, -150)
}
custom_script = ExtResource("8")

[sub_resource type="Animation" id="Animation_4hhhs"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_7g4j5"]
resource_name = "swinging"
length = 0.6000000238418579
step = 0.1000000014901161
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2000000029802322, 0.4000000059604645, 0.6000000238418579),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.174533, -0.174533, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3u2s4"]
_data = {
"RESET": SubResource("Animation_4hhhs"),
"swinging": SubResource("Animation_7g4j5")
}

[node name="Icicle" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 32
script = ExtResource("1")
trigger_area = Rect2(-64, -32, 128, 480)
stunning_sound = ExtResource("2")
explosion_effect = ExtResource("3")
sprite = NodePath("Sprite2D")
gravity_scale = 0.4

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_h3ptm")
texture = ExtResource("5")
offset = Vector2(0, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 32)
shape = SubResource("RectangleShape2D_3q3cl")

[node name="Body" type="Area2D" parent="."]
visible = false
position = Vector2(0.53125, 32)
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Body"]
visible = false
position = Vector2(0, -1)
polygon = PackedVector2Array(-16.53129959106445, -31, -16.53129959106445, -15, -0.53125, 33, 15.46879959106445, -15, 15.46879959106445, -31)

[node name="EnemyAttacked" type="Node" parent="Body"]
script = ExtResource("6")
stomping_standard = Vector2(0, 0)
killing_immune = {
"beetroot": true,
"boomerang": false,
"fireball": true,
"hammer": false,
"iceball": true,
"shell": true,
"shell_defence": 99
}
killing_creation = SubResource("Resource_6dehk")
killing_scores = 300
killing_sound_succeeded = ExtResource("10")
killing_sound_failed = ExtResource("11")

[node name="LeftExplosion" type="Marker2D" parent="."]
visible = false

[node name="RightExplosion" type="Marker2D" parent="."]
visible = false
position = Vector2(0, 32)

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
modulate = Color(1, 1, 1, 0.01960779912769794)
position = Vector2(1.430509996680485e-06, 32)
scale = Vector2(2.400000095367432, 3.200000047683716)
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3u2s4")
}
script = ExtResource("12")

[node name="TimerRand" type="Timer" parent="AnimationPlayer"]
one_shot = true

[connection signal="killed_succeeded" from="Body/EnemyAttacked" to="." method="queue_free"]
